# tokenizor_agentic_mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  TOKENIZOR_CONTEXT_AND_EXECUTION_PLAN.md
.claude/: gsd-file-manifest.json  settings.local.json
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.serena/: project.yml
_bmad-output/: project-context.md  workflow-execution-log.md
_bmad-output/implementation-artifacts/: 1-1-validate-local-runtime-readiness.md  1-2-start-tokenizor-through-a-guarded-run-entrypoint.md  1-3-initialize-a-repository-as-a-durable-project-workspace.md  1-4-inspect-known-projects-and-workspaces.md  1-5-resolve-the-active-workspace-from-context-or-override.md  1-6-add-additional-workspaces-or-worktrees-to-an-existing-project.md  1-7-migrate-or-update-workspace-state-safely.md  2-1-start-an-indexed-run-with-durable-run-identity.md  2-3-persist-file-level-indexing-outputs-and-symbol-file-metadata-for-the-initial-quality-focus-language-set.md  2-4-extend-indexing-through-a-repeatable-broader-language-onboarding-pattern.md  2-5-inspect-run-status-and-health.md  2-8-checkpoint-long-running-indexing-work.md  4-1-sweep-stale-leases-and-interrupted-state-on-startup.md  4-2-resume-interrupted-indexing-from-durable-checkpoints.md  4-3-move-mutable-run-durability-to-the-spacetimedb-control-plane.md  4-6-preserve-operational-history-for-runs-repairs-and-integrity-events.md  epic-1-retro-2026-03-07.md  epic-3-retro-2026-03-08.md  epic3-registry-benchmark.md  sprint-status.yaml
docs/: README.md  ROADMAP-v2.md  api-contracts.md  architecture.md  data-models.md  development-guide.md  index.md  live-code-backlog.md  project-overview.md  project-parts.json  project-scan-report.json  provider_cli_integration_research.md  provider_cli_runtime_architecture.md  release-process.md  source-tree-analysis.md  tokenizor_project_direction.md
execution/: release_ops.py  task_queue.py  test_version_sync.py
npm/: package.json
scripts/: ensure-runtime.sh  setup.sh  tokenizor-mcp.sh
src/: config.rs  daemon.rs  error.rs  git.rs  hash.rs  lib.rs  main.rs  observability.rs  worktree.rs
src/cli/: hook.rs  (+2 more)
tasks/: todo.md
tests/: admission_acceptance.rs  call_time_cochange.rs  call_time_frecency.rs  capability_evidence.rs  config_files.rs  conformance.rs  coupling_calibration.rs  coupling_refresh_generation_fence.rs  daemon_aliases.rs  edit_hook_behavior.rs  edit_safety_tee.rs  epic4_hardening.rs  find_dependents_pass2.rs  frecency_ranking.rs  frontend_assets.rs  git_temporal_generation_fence.rs  hook_enrichment_integration.rs  hook_subprocess_integration.rs  indexing_integration.rs  init_integration.rs  live_index_integration.rs  live_index_publish_atomicity.rs  persist_compression_ratio.rs  rank_signal_behavior.rs  retrieval_conformance.rs  schema_roundtrip.rs  search_files_path_cochange_calibration.rs  sfb25_analytics_queue.rs  sfb27_ci_yaml_corpus.rs  sfb28_ci_yaml_repository_intelligence.rs  sidecar_contract.rs  sidecar_integration.rs  tree_sitter_grammars.rs  watcher_b_p0_1_regression.rs  watcher_index_folder_leak.rs  watcher_integration.rs  watcher_layer3_restat.rs  watcher_reload_cancellation.rs  worktree_awareness.rs  xref_integration.rs
(+427 files in other folders)
