[package]
name = "tokenizor_agentic_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rayon = "1.10"
schemars = "1"
rmcp = { version = "1.1.0", features = ["transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-std", "macros", "rt-multi-thread", "time", "sync"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"

[features]
# v1 feature gate: keeps retrieval_conformance.rs compiling without v1 domain types.
# These tests will be rewritten for v2 response format in Phase 2.
v1 = []

[dev-dependencies]
tempfile = "3"
once_cell = "1"
