[package]
name = "tokenizor_agentic_mcp"
version = "0.3.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
rayon = "1.10"
schemars = "1"
rmcp = { version = "1.1.0", features = ["transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-std", "macros", "rt-multi-thread", "time", "sync", "signal"] }
postcard = { version = "1.1", features = ["use-std"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-swift = "0.7.1"
tree-sitter-perl = "1.1.2"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-dart = "0.0.4"
tree-sitter-elixir = "0.3.5"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# v1 feature gate: keeps retrieval_conformance.rs compiling without v1 domain types.
# These tests will be rewritten for v2 response format in Phase 2.
v1 = []

[dev-dependencies]
tempfile = "3"
once_cell = "1"
postcard = { version = "1.1", features = ["use-std"] }
